--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-fab": "^1.0.17",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keychain": "^6.1.1",
     "react-native-material-ripple": "^0.9.1",
