--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keychain": "^6.1.1",
     "react-native-material-ripple": "^0.9.1",
@@ -49,6 +50,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-tab-view": "^2.14.4",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
     "react-navigation-stack": "^2.7.0",
