--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-native-screens": "~2.2.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-tab-view": "^2.14.4",
+    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
