--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "apisauce": "1.1.1",
-    "expo": "~37.0.3",
+    "expo": "^37.0.12",
     "expo-localization": "~8.1.0",
     "i18n-js": "^3.0.11",
     "lodash.throttle": "4.1.1",
