--- a/package.json
+++ b/package.json
@@ -40,12 +40,13 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-draggable-flatlist": "^2.3.3",
     "react-native-elements": "^2.0.2",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keychain": "^6.1.1",
     "react-native-material-ripple": "^0.9.1",
-    "react-native-reanimated": "~1.7.0",
+    "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "0.7.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.2.0",
