--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-elements": "^2.0.2",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-keychain": "^6.1.1",
     "react-native-material-ripple": "^0.9.1",
     "react-native-reanimated": "^1.7.1",
