--- a/app.json
+++ b/app.json
@@ -3,13 +3,13 @@
     "name": "Goalkeeper",
     "slug": "Goalkeeper",
     "platforms": ["ios", "android", "web"],
-    "version": "1.0.0",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#191414"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -17,12 +17,12 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "bundleIdentifier": "com.dsyu.goalkeeper",
-      "buildNumber": "1.0.0",
+      "buildNumber": "1.0.2",
       "supportsTablet": true
     },
     "android": {
       "package": "com.dsyu.goalkeeper",
-      "versionCode": 1
+      "versionCode": 3
     }
   }
 }
