cleaned up dependencies

--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "apisauce": "1.1.1",
+    "buffer": "^5.6.0",
     "expo": "^37.0.12",
     "expo-localization": "~8.1.0",
-    "i18n-js": "^3.0.11",
     "lodash.throttle": "4.1.1",
     "mobx": "^4.15.4",
     "mobx-react-lite": "^1.4.1",
@@ -65,9 +65,6 @@
     "@babel/core": "^7.8.6",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-optional-catch-binding": "^7.0.0",
-    "@storybook/addon-storyshots": "5.3.17",
-    "@storybook/react-native": "5.3.17",
-    "@storybook/react-native-server": "5.3.17",
     "@types/jest": "25.2.2",
     "@types/ramda": "0.26.44",
     "@types/react": "16.9.23",
